--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,25 @@
           <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+        <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+            <version>6.3.4</version>
+			<scope>test</scope>
+		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
         <!-- Spring Boot Starter Data JPA -->
          <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -86,6 +105,8 @@
           <version>${spring.boot.version}</version>
         </dependency>
 
+        
+
     </dependencies>
 
     <build>
@@ -105,6 +126,9 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
