--- a/pom.xml
+++ b/pom.xml
@@ -47,26 +47,26 @@
           <groupId>com.oracle.database.jdbc</groupId>
           <artifactId>ojdbc11</artifactId>
           <version>21.5.0.0</version>
-          <scope>runtime</scope>
+          <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>oraclepki</artifactId>
             <version>21.5.0.0</version>
-            <scope>runtime</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>osdt_cert</artifactId>
             <version>21.5.0.0</version>
-            <scope>runtime</scope>
+            <scope>compile</scope>
         </dependency>
 		    <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>osdt_core</artifactId>
             <version>21.5.0.0</version>
-            <scope>runtime</scope>
+            <scope>compile</scope>
         </dependency>
 
         <!-- JUnit  para pruebas -->
